tests/ui/parser/unicode-chars.stderr
error: unknown start of token: \u{37e}
  --> $DIR/unicode-chars.rs:2:14
   |
LL |     let y = 0;
   |              ^
   |
help: Unicode character ';' (Greek Question Mark) looks like ';' (Semicolon), but it is not
   |
LL |     let y = 0;
   |              ~

error: unknown start of token: \u{a0}
  --> $DIR/unicode-chars.rs:5:5
   |
LL |         let x = 0;
   |     ^^^^
   |
   = note: character appears 3 more times
help: Unicode character ' ' (No-Break Space) looks like ' ' (Space), but it is not
   |
LL |         let x = 0;
   |     ++++

error: aborting due to 2 previous errors

